# RPiPlay

lib/: CMakeLists.txt  raop_rtp_mirror.c
renderers/: CMakeLists.txt  video_renderer_gstreamer.c
